<resources>
    <string name="app_name">MusicAppdemo2</string>
    <string name="action_home">Home</string>
    <string name="action_search">Search</string>
    <string name="action_playlist">Playlist</string>
    <string name="action_user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_worry_we_just_need_your_registered_email_address_and_it_s_done">Don\'t worry we just need your registered email address and it\'s done!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="have_an_account">Have an account?</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="library">Library</string>
    <string name="search">Search</string>

</resources>